# py-pydantic-sqlalchemy

./: .gitignore  Makefile  README.md  pyproject.toml
config/: parser_config.example.yaml
src/py_pydantic_sqlalchemy/: format.py  generator.py  main.py  model.py  parser.py  reflection.py  renderer.py  utils.py  writer.py
src/py_pydantic_sqlalchemy/templates/: model_insert_template.mako  model_template.mako
tests/: test_generator.py  test_utils.py
tests/test_data/: pydantic_user.py  sqla_user.py
