[tool.poetry]
name = "py-pydantic-sqlalchemy"
version = "0.1.0"
description = ""
authors = ["Wilson Santos <wilson.santos.dev87@gmail.com>"]
readme = "README.md"
packages = [{include = "py_pydantic_sqlalchemy", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.9.2"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
pylint = "^3.3.1"
pyright = "^1.1.386"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
