[tool.poetry]
name = "py-pydantic-sqlalchemy"
version = "0.1.0"
description = ""
authors = ["Wilson Santos <wilson.santos.dev87@gmail.com>"]
readme = "README.md"
packages = [{include = "py_pydantic_sqlalchemy", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.9.2"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
pylint = "^3.3.1"
pyright = "^1.1.386"
pytest = "^8.3.3"
pytest-watch = "^4.2.0"
pytest-cov = "^5.0.0"
pytest-testmon = "^2.1.1"

[tool.isort]
profile = "black"
src_paths = ["src", "test"]

[tool.pylint]
extension-pkg-allow-list = ["pydantic"]

[tool.pylint.'MESSAGES CONTROL']
disable = [
  'missing-module-docstring',
  'missing-class-docstring',
  'missing-function-docstring',
  'too-few-public-methods',
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
